--- a/apisix/Vagrantfile
+++ b/apisix/Vagrantfile
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder "../tidb", "/tidb/config" #,create: true,owner: "root", group: "root" #,mount_options:["dmode=775","fmode=644"] #共享目录
+  config.vm.synced_folder "../apisix", "/apisix/config" #,create: true,owner: "root", group: "root" #,mount_options:["dmode=775","fmode=644"] #共享目录
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -62,16 +62,16 @@ Vagrant.configure("2") do |config|
   #
   # View the documentation for the provider you are using for more
   # information on available options.
-    config.vm.hostname = "tidb"
+    config.vm.hostname = "apisix"
     config.vm.provider "virtualbox" do |vb|
       # Display the VirtualBox GUI when booting the machine
       vb.gui = false
-      vb.name = "tidb-all"
+      vb.name = "apisix"
 
 
       # Customize the amount of memory on the VM:
-      vb.memory = "10240"
-      vb.cpus = 8
+      vb.memory = "1024"
+      vb.cpus = 2
     end
 
   # Enable provisioning with a shell script. Additional provisioners such as
